--- a/geomuseet_Faxe.html
+++ b/geomuseet_Faxe.html
@@ -9,6 +9,8 @@
     <meta name="description" content="Geomuseet Faxe ved Stevns Klint. En del af Unesco's verdensarv" />
     <meta name="keywords" content="Stevns Klint, UNESCO Verdensarv, Kalklandet" />
     <meta name="author" content="Charlotte Fuchs" />
+
+    <link rel="stylesheet" type="text/css" href="css/grid.css" />
     <link rel="stylesheet" type="text/css" href="css/demo.css" />
     <link rel="stylesheet" type="text/css" href="css/component.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
@@ -19,6 +21,10 @@
 
         #splash {
             display: none !important;
+        }
+
+        .splashHeader img {
+            width: 100%;
         }
 
         #mobileSplash {
@@ -36,6 +42,118 @@
 
         h1.animate {
             display: none !important;
+        }
+
+        /* pagesGrid */
+        div.splashHeader img {
+            max-width: 100%;
+            max-height: 400px;
+            overflow: hidden;
+        }
+
+        .pagesGrid-item-container {
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+        }
+
+        @media screen and (max-width: 809px) {
+
+
+            article.kalk {
+                display: grid;
+                grid-template-columns: 1fr 1fr;
+                padding-top: 30px;
+
+            }
+
+            .grid-item {
+                width: 50%;
+                height: auto;
+                grid-template-rows: 1fr 1fr;
+            }
+
+            .grid-item:nth-child(1) {
+                grid-column: 1 / 7;
+                grid-row: 1 / 2;
+            }
+
+            .grid-item:nth-child(2) {
+                grid-column: 1 / 3;
+                grid-row: span 1;
+                width: 100%;
+                margin: 0 auto;
+            }
+
+            .grid-item:nth-child(3) {
+                grid-column: 1 / 3;
+                grid-row: span 1;
+                width: 100%;
+                margin: 0 auto;
+            }
+
+            .grid-item:nth-child(4) {
+                grid-column: 3 / 7;
+                grid-row: span 2;
+            }
+
+            .grid-item:nth-child(5) {
+                grid-column: 1 / 7;
+                grid-row: span 1;
+                width: 100%;
+                text-align: center;
+                padding-top: 1em;
+                border-left: none;
+            }
+
+            p.grid-item:nth-child(5) {
+                text-align: left;
+            }
+        }
+
+        @media all and (max-width: 575px) {
+            .grid-container {
+                display: grid;
+                grid-template-columns: 1fr;
+                padding-top: 10px;
+
+            }
+
+            article.kalk {
+                display: grid;
+                grid-template-columns: 1fr;
+                padding-top: 0px;
+            }
+
+            .grid-item {
+                width: 100%;
+                height: auto;
+                grid-template-rows: 1fr;
+            }
+
+            .grid-item:nth-child(1) {
+                grid-column: 1 / 7;
+                grid-row: 1 / 2;
+            }
+
+            .grid-item:nth-child(2) {
+                grid-column: 1 / 7;
+                grid-row: span 1;
+            }
+
+            .grid-item:nth-child(3) {
+                grid-column: 1 / 7;
+                grid-row: span 1;
+            }
+
+            .grid-item:nth-child(4) {
+                grid-column: 1 / 7;
+                grid-row: span 1;
+            }
+
+            .grid-item:nth-child(5) {
+                grid-column: 1 / 7;
+                grid-row: span 1;
+            }
         }
 
     </style>
@@ -170,7 +288,7 @@
     </div>
 
     <!-- Footer -->
-        <div id="wrapper">
+    <div id="wrapper">
         <div id="footer">
             <div class="breakFooter">
                 <div class="footerFloat">
@@ -199,19 +317,19 @@
                     </ul>
                 </div>
             </div>
-          <div class="footerFloat">
-                    <h4>Hvem er vi</h4>
-                    <ul>
-                        <li>Østsjællands Museumsforening</li>
-                        <li>Ledige stillinger</li>
-                        <li>Museets historie</li>
-                        <li>Medarbejdere</li>
-                        <li>Frivillige</li>
-                        <li>Bestyrelse</li>
-                        <li>Sponsorer</li>
-                        <li>Presse</li>
-                    </ul>
-                </div>
+            <div class="footerFloat">
+                <h4>Hvem er vi</h4>
+                <ul>
+                    <li>Østsjællands Museumsforening</li>
+                    <li>Ledige stillinger</li>
+                    <li>Museets historie</li>
+                    <li>Medarbejdere</li>
+                    <li>Frivillige</li>
+                    <li>Bestyrelse</li>
+                    <li>Sponsorer</li>
+                    <li>Presse</li>
+                </ul>
+            </div>
             <div class="breakFooter">
                 <div class="footerFloat">
                     <h4>Find vej</h4>
