--- a/geomuseet_Faxe.html
+++ b/geomuseet_Faxe.html
@@ -15,15 +15,33 @@
     <link rel="stylesheet" type="text/css" href="css/component.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <style type="text/css">
-        header {
-            display: none;
-        }
+      /* flag p undersider */
+            div.flag_inner {
+    display: block;
+}
+      /* myHeader */
+/* Wrapper */
+.page-nav {
+  width: 100%;
+  background-color: #42c1c0;
+  margin-top: -4px;
+}
+.page-nav ul li a {
+  text-decoration: none;
+color: ##796d65;;
+}
+
+.page-nav a.active {
+  background-color: #fff;
+    color: #ec7f44;
+    cursor: default;
+}
+
 
         #splash {
             display: none !important;
         }
-
-        .splashHeader img {
+        .splashHeader img{
             width: 100%;
         }
 
@@ -43,119 +61,45 @@
         h1.animate {
             display: none !important;
         }
-
-        /* pagesGrid */
-        div.splashHeader img {
-            max-width: 100%;
-            max-height: 400px;
-            overflow: hidden;
+        div#flag{
+            display: block;
         }
+        .pagesGrid-item:nth-child(3) {
+    grid-column: 1 /6;
+    grid-row: 3/ 4;
+}
+.pagesGrid-item:nth-child(4) {
+    grid-column: 1 / 3;
+    grid-row: 4/ 5;
+}
+.pagesGrid-item:nth-child(5) {
+    grid-column: 3/ 6;
+    grid-row: 4/ 5;
+}
+.pagesGrid-item:nth-child(6) {
+    grid-column: 6/ 7;
+    grid-row: 3/ 5;
+    border-left: 4px solid #EC7F44;
+    width: 180px;
+}
 
-        .pagesGrid-item-container {
-            display: grid;
-            grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-        }
+div.frontGrid-item:nth-child(8) {
+    grid-column: 6 / 7;
+    grid-row: 2 / 4;
+    border-left: 4px solid #EC7F44;
+    /*margin-top: 45px;*/
+}
+  @media screen and (max-width: 768px){
+      .page-nav a.active {
 
-        @media screen and (max-width: 809px) {
+    background-color: #ec7f44;
+    color: #FFF;
+    cursor: default;
+    display: inline-block;
+    padding: inherit;
 
-
-            article.kalk {
-                display: grid;
-                grid-template-columns: 1fr 1fr;
-                padding-top: 30px;
-
-            }
-
-            .grid-item {
-                width: 50%;
-                height: auto;
-                grid-template-rows: 1fr 1fr;
-            }
-
-            .grid-item:nth-child(1) {
-                grid-column: 1 / 7;
-                grid-row: 1 / 2;
-            }
-
-            .grid-item:nth-child(2) {
-                grid-column: 1 / 3;
-                grid-row: span 1;
-                width: 100%;
-                margin: 0 auto;
-            }
-
-            .grid-item:nth-child(3) {
-                grid-column: 1 / 3;
-                grid-row: span 1;
-                width: 100%;
-                margin: 0 auto;
-            }
-
-            .grid-item:nth-child(4) {
-                grid-column: 3 / 7;
-                grid-row: span 2;
-            }
-
-            .grid-item:nth-child(5) {
-                grid-column: 1 / 7;
-                grid-row: span 1;
-                width: 100%;
-                text-align: center;
-                padding-top: 1em;
-                border-left: none;
-            }
-
-            p.grid-item:nth-child(5) {
-                text-align: left;
-            }
-        }
-
-        @media all and (max-width: 575px) {
-            .grid-container {
-                display: grid;
-                grid-template-columns: 1fr;
-                padding-top: 10px;
-
-            }
-
-            article.kalk {
-                display: grid;
-                grid-template-columns: 1fr;
-                padding-top: 0px;
-            }
-
-            .grid-item {
-                width: 100%;
-                height: auto;
-                grid-template-rows: 1fr;
-            }
-
-            .grid-item:nth-child(1) {
-                grid-column: 1 / 7;
-                grid-row: 1 / 2;
-            }
-
-            .grid-item:nth-child(2) {
-                grid-column: 1 / 7;
-                grid-row: span 1;
-            }
-
-            .grid-item:nth-child(3) {
-                grid-column: 1 / 7;
-                grid-row: span 1;
-            }
-
-            .grid-item:nth-child(4) {
-                grid-column: 1 / 7;
-                grid-row: span 1;
-            }
-
-            .grid-item:nth-child(5) {
-                grid-column: 1 / 7;
-                grid-row: span 1;
-            }
-        }
-
+}
+      }
     </style>
 </head>
 
@@ -169,7 +113,7 @@
                         <ul class="menu">
                             <li class="search-item">
                                 <input placeholder="Search" type="search" class="search">
-                                <a class="icon icon-search"><img class="icon" src="slider/ikoner/searchKalklandet.png"><span>Søg</span></a>
+                                <a class="icon icon-search"><img class="icon" src="slider/ikoner/searchKalklandet.png"><span>Sg</span></a>
                             </li>
                             <li>
                                 <div>
@@ -263,6 +207,13 @@
                     </div>
                 </div>
             </div><!-- /splash -->
+            <div id="flag">
+                    <div class="flag_inner">
+                        <img class="myFlag" src="flag/denmark.jpg" />
+                        <img class="myFlag" src="flag/tyskland.jpg" />
+                        <img class="myFlag" src="flag/united_kingdom.jpg" />
+                    </div>
+            </div><!-- flag -->
         </header>
     </div><!-- /container -->
     <div class="area-wrapper">
@@ -288,7 +239,7 @@
     </div>
 
     <!-- Footer -->
-    <div id="wrapper">
+        <div id="wrapper">
         <div id="footer">
             <div class="breakFooter">
                 <div class="footerFloat">
@@ -317,19 +268,19 @@
                     </ul>
                 </div>
             </div>
-            <div class="footerFloat">
-                <h4>Hvem er vi</h4>
-                <ul>
-                    <li>Østsjællands Museumsforening</li>
-                    <li>Ledige stillinger</li>
-                    <li>Museets historie</li>
-                    <li>Medarbejdere</li>
-                    <li>Frivillige</li>
-                    <li>Bestyrelse</li>
-                    <li>Sponsorer</li>
-                    <li>Presse</li>
-                </ul>
-            </div>
+          <div class="footerFloat">
+                    <h4>Hvem er vi</h4>
+                    <ul>
+                        <li>Østsjællands Museumsforening</li>
+                        <li>Ledige stillinger</li>
+                        <li>Museets historie</li>
+                        <li>Medarbejdere</li>
+                        <li>Frivillige</li>
+                        <li>Bestyrelse</li>
+                        <li>Sponsorer</li>
+                        <li>Presse</li>
+                    </ul>
+                </div>
             <div class="breakFooter">
                 <div class="footerFloat">
                     <h4>Find vej</h4>
