--- a/geomuseet_Faxe.html
+++ b/geomuseet_Faxe.html
@@ -15,33 +15,37 @@
     <link rel="stylesheet" type="text/css" href="css/component.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <style type="text/css">
-      /* flag p undersider */
-            div.flag_inner {
-    display: block;
-}
-      /* myHeader */
-/* Wrapper */
-.page-nav {
-  width: 100%;
-  background-color: #42c1c0;
-  margin-top: -4px;
-}
-.page-nav ul li a {
-  text-decoration: none;
-color: ##796d65;;
-}
+        /* flag p undersider */
+        div.flag_inner {
+            display: block;
+        }
 
-.page-nav a.active {
-  background-color: #fff;
-    color: #ec7f44;
-    cursor: default;
-}
+        /* myHeader */
+        /* Wrapper */
+        .page-nav {
+            width: 100%;
+            background-color: #42c1c0;
+            margin-top: -4px;
+        }
+
+        .page-nav ul li a {
+            text-decoration: none;
+            color: ##796d65;
+            ;
+        }
+
+        .page-nav a.active {
+            background-color: #fff;
+            color: #ec7f44;
+            cursor: default;
+        }
 
 
         #splash {
             display: none !important;
         }
-        .splashHeader img{
+
+        .splashHeader img {
             width: 100%;
         }
 
@@ -61,45 +65,52 @@ color: ##796d65;;
         h1.animate {
             display: none !important;
         }
-        div#flag{
+
+        div#flag {
             display: block;
         }
+
         .pagesGrid-item:nth-child(3) {
-    grid-column: 1 /6;
-    grid-row: 3/ 4;
-}
-.pagesGrid-item:nth-child(4) {
-    grid-column: 1 / 3;
-    grid-row: 4/ 5;
-}
-.pagesGrid-item:nth-child(5) {
-    grid-column: 3/ 6;
-    grid-row: 4/ 5;
-}
-.pagesGrid-item:nth-child(6) {
-    grid-column: 6/ 7;
-    grid-row: 3/ 5;
-    border-left: 4px solid #EC7F44;
-    width: 180px;
-}
+            grid-column: 1 /6;
+            grid-row: 3/ 4;
+        }
 
-div.frontGrid-item:nth-child(8) {
-    grid-column: 6 / 7;
-    grid-row: 2 / 4;
-    border-left: 4px solid #EC7F44;
-    /*margin-top: 45px;*/
-}
-  @media screen and (max-width: 768px){
-      .page-nav a.active {
+        .pagesGrid-item:nth-child(4) {
+            grid-column: 1 / 3;
+            grid-row: 4/ 5;
+        }
 
-    background-color: #ec7f44;
-    color: #FFF;
-    cursor: default;
-    display: inline-block;
-    padding: inherit;
+        .pagesGrid-item:nth-child(5) {
+            grid-column: 3/ 6;
+            grid-row: 4/ 5;
+        }
 
-}
-      }
+        .pagesGrid-item:nth-child(6) {
+            grid-column: 6/ 7;
+            grid-row: 3/ 5;
+            border-left: 4px solid #EC7F44;
+            width: 180px;
+        }
+
+        div.frontGrid-item:nth-child(8) {
+            grid-column: 6 / 7;
+            grid-row: 2 / 4;
+            border-left: 4px solid #EC7F44;
+            /*margin-top: 45px;*/
+        }
+
+        @media screen and (max-width: 768px) {
+            .page-nav a.active {
+
+                background-color: #ec7f44;
+                color: #FFF;
+                cursor: default;
+                display: inline-block;
+                padding: inherit;
+
+            }
+        }
+
     </style>
 </head>
 
@@ -208,11 +219,11 @@ div.frontGrid-item:nth-child(8) {
                 </div>
             </div><!-- /splash -->
             <div id="flag">
-                    <div class="flag_inner">
-                        <img class="myFlag" src="flag/denmark.jpg" />
-                        <img class="myFlag" src="flag/tyskland.jpg" />
-                        <img class="myFlag" src="flag/united_kingdom.jpg" />
-                    </div>
+                <div class="flag_inner">
+                    <img class="myFlag" src="flag/denmark.jpg" />
+                    <img class="myFlag" src="flag/tyskland.jpg" />
+                    <img class="myFlag" src="flag/united_kingdom.jpg" />
+                </div>
             </div><!-- flag -->
         </header>
     </div><!-- /container -->
@@ -239,7 +250,7 @@ div.frontGrid-item:nth-child(8) {
     </div>
 
     <!-- Footer -->
-        <div id="wrapper">
+    <div id="wrapper">
         <div id="footer">
             <div class="breakFooter">
                 <div class="footerFloat">
@@ -268,19 +279,19 @@ div.frontGrid-item:nth-child(8) {
                     </ul>
                 </div>
             </div>
-          <div class="footerFloat">
-                    <h4>Hvem er vi</h4>
-                    <ul>
-                        <li>Østsjællands Museumsforening</li>
-                        <li>Ledige stillinger</li>
-                        <li>Museets historie</li>
-                        <li>Medarbejdere</li>
-                        <li>Frivillige</li>
-                        <li>Bestyrelse</li>
-                        <li>Sponsorer</li>
-                        <li>Presse</li>
-                    </ul>
-                </div>
+            <div class="footerFloat">
+                <h4>Hvem er vi</h4>
+                <ul>
+                    <li>Østsjællands Museumsforening</li>
+                    <li>Ledige stillinger</li>
+                    <li>Museets historie</li>
+                    <li>Medarbejdere</li>
+                    <li>Frivillige</li>
+                    <li>Bestyrelse</li>
+                    <li>Sponsorer</li>
+                    <li>Presse</li>
+                </ul>
+            </div>
             <div class="breakFooter">
                 <div class="footerFloat">
                     <h4>Find vej</h4>
