Ja det system her er jo et loteri om den fanger css'en ikke optimalt

--- a/koldkrigsmuseum.html
+++ b/koldkrigsmuseum.html
@@ -87,6 +87,10 @@
 
         }
 
+        span {
+            display: none;
+        }
+
         @media screen and (max-width: 768px) {
 
             /* Show Hamburger*/
@@ -103,6 +107,14 @@
                 background-color: #ec7f44;
                 color: #FFF;
                 padding: inherit;
+            }
+
+            span {
+                display: block;
+                float: right;
+                padding-top: 15px;
+                padding-right: 12px;
+                color: #ec7f44;
             }
         }
 
