--- a/koldkrigsmuseum.html
+++ b/koldkrigsmuseum.html
@@ -59,7 +59,9 @@
         /* intern nav */
         .page-nav {
             background-color: #628ca1;
+            margin-top: -5px;
         }
+
 
         .page-nav a.active {
             background-color: #ec7f44;
@@ -256,7 +258,6 @@
                 height: 220px;
             }
         }
-
     </style>
 </head>
 
@@ -509,13 +510,11 @@
                 dest.appendChild(klon);
             });
         }
-
     </script>
     <script src="js/classie.js"></script>
     <script src="js/myMenu.js"></script>
     <script>
         new myMenu(document.getElementById('menu'));
-
     </script>
     <script>
         var myIndex = 0;
@@ -534,7 +533,6 @@
             x[myIndex - 1].style.display = "block";
             setTimeout(carousel, 3000); // Change image every 2 seconds
         }
-
     </script>
     <script>
         function myFunction() {
@@ -545,8 +543,5 @@
                 x.style.display = "block";
             }
         }
-
     </script>
-</body>
-
-</html>
+</body></html>
