Små fix for flag

--- a/geomuseet_Faxe.html
+++ b/geomuseet_Faxe.html
@@ -30,7 +30,7 @@
 
         .page-nav ul li a {
             text-decoration: none;
-            color: ##796d65;
+            color: #796d65;
             ;
         }
 
@@ -45,9 +45,6 @@
             display: none !important;
         }
 
-        .splashHeader img {
-            width: 100%;
-        }
 
         #mobileSplash {
             display: none !important;
