undervisningGeo med flag

--- a/koldkrigsmuseum.html
+++ b/koldkrigsmuseum.html
@@ -90,7 +90,7 @@
         }
 
         span {
-            display: none;
+            display: none !important;
         }
 
         @media screen and (max-width: 768px) {
