--- a/index.html
+++ b/index.html
@@ -16,9 +16,17 @@
     <style>
         /* frontGrid indhold */
         .overskrift {
-            text-align: center;
             display: none;
         }
+      @media screen and (max-width: 575px) {
+    div.splashHeader img {
+      max-height: 300px;
+    padding: 30px 0 0;
+}
+   div.footerFloat {
+        width: 100% !important;
+    }
+      }
     </style>
 </head>
 
@@ -32,71 +40,53 @@
                         <ul class="menu">
                             <li class="search-item">
                                 <input placeholder="Search" type="search" class="search">
-                                <a class="icon icon-search"><img class="icon" src="slider/ikoner/searchKalklandet.png"><span>Sg</span></a>
+                                <a class="icon icon-search"><img class="icon" src="slider/ikoner/searchKalklandet.png" alt="Ikon for search"><span>Søg</span></a>
                             </li>
                             <li>
                                 <div>
-                                    <img class="icon" src="slider/ikoner/kalklandet_lille_ikon.png">
+                                    <img class="icon" src="slider/ikoner/kalklandet_lille_ikon.png" alt="Ikon for small devices Kalklandet">
                                     <a href="http://medicinolie.dk/kalklandet/index.html">Kalklandet</a>
                                 </div>
                             </li>
                             <li>
                                 <div>
-                                    <img class="icon" src="slider/ikoner/K_stevnsfort_koldkrigsmuseum.png">
+                                    <img class="icon" src="slider/ikoner/K_stevnsfort_koldkrigsmuseum.png" alt="Ikon koldkrigsmuseum Stevnsfort">
                                     <a href="http://medicinolie.dk/kalklandet/koldkrigsmuseum.html">Koldkrigsmuseum</a>
                                 </div>
                             </li>
                             <li>
                                 <div>
-                                    <img class="icon" src="slider/ikoner/STEVNS_MUSEUM_ikon.png">
-                                    <a href="http://medicinolie.dk/kalklandet/stevns_museum.html">Stevns Museum</a>
+                                    <img class="icon" src="slider/ikoner/STEVNS_MUSEUM_ikon.png" alt="ikon Stevns Museum">
+                                    <a href="http://medicinolie.dk/kalklandet/stevns_museum.html">Stevns Klint</a>
                                 </div>
                             </li>
                             <li>
                                 <div>
-                                    <img class="icon" src="slider/ikoner/Geomuseum_Faxe_Kalkbrud_fossil_ikon.png">
+                                    <img class="icon" src="slider/ikoner/Geomuseum_Faxe_Kalkbrud_fossil_ikon.png" alt="ikon geomuseet_Faxe">
                                     <a href="http://medicinolie.dk/kalklandet/geomuseet_Faxe.html">Geomuseum Faxe</a>
                                 </div>
                             </li>
                             <li>
                                 <div>
-                                    <img class="icon" src="slider/ikoner/stevns_naturcenter_ikon.png">
+                                    <img class="icon" src="slider/ikoner/stevns_naturcenter_ikon.png" alt="ikon stevns_naturcenter">
                                     <a href="http://medicinolie.dk/kalklandet/stevns_naturcenter.html">Stevns Naturcenter</a>
                                 </div>
                             </li>
                             <li>
                                 <div>
-                                    <img class="icon" src="slider/ikoner/stevns_fyr_ikon.png">
-                                    <a href="http://medicinolie.dk/kalklandet/stevns_fyr.html">Stevns Fyr</a>
-                                </div>
-                            </li>
-                            <li>
-                                <div>
-                                    <img class="icon" src="slider/ikoner/lille_heddinge_rytterskole.png">
-                                    <a href="http://medicinolie.dk/kalklandet/lille_heddinge_rytterskole.html">Lille Heddinge Rytterskole</a>
-                                </div>
-                            </li>
-                            <li>
-                                <div>
-                                    <img class="icon" src="slider/ikoner/haslev_museum_ikon.png">
-                                    <a href="http://medicinolie.dk/kalklandet/haslevMuseum.html">Haslev Museum</a>
-                                </div>
-                            </li>
-                            <li>
-                                <div>
-                                    <img class="icon" src="slider/ikoner/videnOm.png">
+                                    <img class="icon" src="slider/ikoner/videnOm.png" alt="Viden om ikon">
                                     <a href="http://medicinolie.dk/kalklandet/videnOm.html">Viden om</a>
                                 </div>
                             </li>
                             <li>
                                 <div>
-                                    <img class="icon" src="slider/ikoner/aktiviteter.png">
-                                    <a href="http://medicinolie.dk/kalklandet/aktiviteter.html">Aktiviteter</a>
+                                    <img class="icon" src="slider/ikoner/aktiviteter.png" alt="aktiviteter kalklandet ikon">
+                                    <a href="http://medicinolie.dk/kalklandet/aktiviteter.html">Aktiviteter på Stevns Klint</a>
                                 </div>
                             </li>
                             <li>
                                 <div>
-                                    <img class="icon" src="slider/ikoner/aboutUs.png">
+                                    <img class="icon" src="slider/ikoner/aboutUs.png" alt="om os ikon">
                                     <a href="http://medicinolie.dk/kalklandet/aboutUs.html">Om os</a>
                                 </div>
                             </li>
@@ -116,21 +106,21 @@
                 <div class="container">
                     <h1 class="animate">Stevns Klint</h1>
                     <div class="banner_inner">
-                        <img class="mySlides" src="slider/Koldkrigsmuseum_stevnsfort_kalklandet.png" />
-                        <img class="mySlides" src="slider/geomuseet_faxe.png" />
-                        <img class="mySlides" src="slider/stevns_naturcenter.png" />
-                        <img class="mySlides" src="slider/stevns_museum_kalklandet_unescos_verdensarv.png" />
-                        <img class="mySlides" src="slider/rytterskolen_lille_heddinge.png" />
-                        <img class="mySlides" src="slider/haslev_museum1.png" />
-                        <img class="mySlides" src="slider/stevns_fyr.png" />
+                        <img class="mySlides" src="slider/Koldkrigsmuseum_stevnsfort_kalklandet.png" alt="slider koldkrigsmuseum" />
+                        <img class="mySlides" src="slider/geomuseet_faxe.png" alt="slider geomuseet_faxe" />
+                        <img class="mySlides" src="slider/stevns_naturcenter.png" alt="slider stevns_naturcenter" />
+                        <img class="mySlides" src="slider/stevns_museum_kalklandet_unescos_verdensarv.png" alt="slider stevns_museum" />
+                        <img class="mySlides" src="slider/rytterskolen_lille_heddinge.png" alt="slider rytterskolen_lille_heddinge" />
+                        <img class="mySlides" src="slider/haslev_museum1.png" alt="slider haslev_museum" />
+                        <img class="mySlides" src="slider/stevns_fyr.png" alt="slider stevns_fyr" />
                     </div>
+            </div><!-- /splash -->
+            <div id="flag">
+                <div class="flag_inner">
+                    <img class="myFlag" src="flag/denmark.jpg" alt="det Danske flag" />
+                    <img class="myFlag" src="flag/tyskland.jpg"  alt="det tyske flag"/>
+                    <img class="myFlag" src="flag/united_kingdom.jpg" alt="det engelske flag" />
                 </div>
-              <div id="flag">
-                    <div class="flag_inner">
-                        <img class="myFlag" src="flag/denmark.jpg" />
-                        <img class="myFlag" src="flag/tyskland.jpg" />
-                        <img class="myFlag" src="flag/united_kingdom.jpg" />
-                    </div>
             </div><!-- flag -->
             </div><!-- /splash -->
         </header>
@@ -157,41 +147,43 @@
             </article>
         </template>
     </div>
+    <!-- Footer -->
     <div id="wrapper">
         <div id="footer">
             <div class="breakFooter">
                 <div class="footerFloat">
                     <h4>Sociale medier</h4>
                     <div class="mb-5 flex-center">
-                        <a class="fb-ic">
+                        <a class="fb-ic link_white" href="https://www.facebook.com/geomuseumfaxe/?__tn__=%2Cd%2CP-R&eid=ARDV5N5Kfq7jBwUb_D8_DrykW3sB1x5ccqS_wKVeDK6k8hUluS8R_-djDcrk8bwYyJPTB2d-anzQm3yz" target="_blank">
                             <i class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
                         </a><!-- Facebook -->
-                        <a class="ins-ic">
+                        <a class="ins-ic link_white" href="https://www.instagram.com/explore/locations/7235238/geomuseum-faxe?hl=da" target="_blank">
                             <i class="fab fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
                         </a>
                         <!--Instagram-->
-                        <a class="pin-ic">
-                            <i class="fab fa-pinterest fa-lg white-text fa-2x"> </i>
+                        <a class="twi-ic link_white" href="https://twitter.com/search?f=images&vertical=default&q=%23%20geomuseum%20%23faxe&src=typd" target="_blank">
+                            <i class="fab fa-twitter fa-lg white-text fa-2x"> </i>
                         </a>
-                        <!--Pinterest-->
+                        <!--twitter-->
                     </div>
-                    <!--flext-->
+                    <!--flex-->
                 </div>
                 <div class="footerFloat">
                     <h4>Vores opgave</h4>
                     <ul>
                         <li>Stevns Klint som verdensarv</li>
-                      <li>Mission og vision</li>
-                      <li>Formidling</li>
+                        <li>Mission og vision</li>
+                        <li>Formidling</li>
                         <li>Planarbejde</li>
-                      	<li>Samarbejde</li>
+                        <li>Samarbejde</li>
                     </ul>
                 </div>
             </div>
+            <div class="breakFooter">
             <div class="footerFloat">
                 <h4>Hvem er vi</h4>
                 <ul>
-                    <li>Østsjællands Museumsforening</li>
+                    <li>&Oslash;stsj&aelig;llands Museumsforening</li>
                     <li>Ledige stillinger</li>
                     <li>Museets historie</li>
                     <li>Medarbejdere</li>
@@ -201,20 +193,18 @@
                     <li>Presse</li>
                 </ul>
             </div>
-            <div class="breakFooter">
                 <div class="footerFloat">
                     <h4>Find vej</h4>
                     <ul>
-                        <li>Guide med tog</li>
-                        <li>Guide med cykel</li>
+                        <li><a class="link_white" href="http://medicinolie.dk/kalklandet/guideMedCykel.html">Guide med cykel/tog</a></li>
                     </ul>
-                    <div class="kort"><iframe id="kort" src="https://maps.google.com/maps?hl=da&ie=UTF8&t=m&ll=55.279616,12.444291&spn=0.004278,0.00912&z=16&output=embed" frameborder="0"></iframe><a href="https://maps.google.com/maps?hl=da&ie=UTF8&t=m&ll=55.279616,12.444291&spn=0.004278,0.00912&z=16&source=embed"></a></div>
+                    <div class="kort"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d4544.977440068292!2d12.444291!3d55.279616!3m2!1i1024!2i768!4f13.1!4m3!3e6!4m0!4m0!5e0!3m2!1sda!2sus!4v1557252704333!5m2!1sda!2sus" allowfullscreen></iframe></div>
                 </div>
             </div>
         </div>
     </div>
     <div class="footer-copyright">
-        <h3>© 2019. ❤ </h3>
+        <h3>&copy; 2019  ❤ </h3>
     </div><!-- Copyright -->
     <!--Script-->
     <script>
